<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.screen.canvas.CanvasActivity">

    <RelativeLayout
        android:id="@+id/bk_story"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_choose_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/patrickhand_regular"
            android:text="@string/draw_the_highlight_word"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/back" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_card"
        android:elevation="4dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="7dp"
        android:paddingEnd="16dp"
        android:paddingBottom="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bk_story">

        <TextView
            android:id="@+id/lstory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/message"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/tundra"
            android:textSize="14sp" />
    </LinearLayout>


    <com.arvl.fasimagiland.canvas.DrawCanvas
        android:id="@+id/draw_pencil"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_canvas"
        android:layout_margin="8dp"
        android:elevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_analyze"
        app:layout_constraintTop_toBottomOf="@id/story"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <FrameLayout
        android:id="@+id/fragment_analyze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp" />

    <Button
        android:id="@+id/btn_analyze"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/outfit_bold"
        android:padding="6dp"
        android:text="@string/btn_analyze"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/draw_pencil"
        android:layout_marginTop="12dp"/>



    <RelativeLayout
        android:id="@+id/action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_card"
        android:elevation="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_analyze">

        <ImageButton
            android:id="@+id/btn_undo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:src="@drawable/ic_unselected_undo" />

        <ImageButton
            android:id="@+id/btn_redo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/btn_undo"
            android:background="@null"
            android:src="@drawable/ic_unselected_redo" />

        <ImageButton
            android:id="@+id/btn_eraser"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_toEndOf="@+id/btn_redo"
            android:background="@null"
            android:src="@drawable/ic_unselected_eraser" />

        <ImageButton
            android:id="@+id/btn_pencil"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_toEndOf="@+id/btn_eraser"
            android:background="@null"
            android:src="@drawable/ic_selected_pencil" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
